common_lock_node() now pretends to be successful - this should fix Vision not being able to store its settings for now (bug #589).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17505 a95241bf-73f2-0310-859d-f6bbb57e9c96